[metadata]
name = pyschemes
version = attr: pyschemes.__version__
author = Michael Keßler
author_email = michael.kessler-michael@web.de
description = "A library for organizing color schemes"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = color, schemes, library, python, color schemes, color palettes, monochromatic, color theory
license = MIT

[options]
packages = find:
python_requires = >=3.6

