[metadata]
name = pyschemes
version = 0.1.0
author = Michael Keßler
author_email = michael.kessler-michael@web.de
description = "A library for organizing color schemes"
url = github.com/michak97/PySchemes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = color, schemes, library, python, color schemes, color palettes, monochromatic, color theory
license = MIT
classifiers =
		Programming Language :: Python :: 3
		License :: OSI Approved :: MIT License
		Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
	opencv-python == 4.8.0.76
	numpy == 1.25.2

